<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relative_Layout">

    <Button
        android:id="@+id/siguiente"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/boton_siguiente" />

    <Button
        android:id="@+id/norte"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:text="@string/norte"
        android:onClick="norte"/>

    <Button
        android:id="@+id/noroeste"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/norte"
        android:layout_toStartOf="@+id/norte"
        android:text="@string/noroeste" />

    <Button
        android:id="@+id/oeste"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/noroeste"
        android:text="@string/oeste" />

    <Button
        android:id="@+id/suroeste"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oeste"
        android:layout_toStartOf="@+id/norte"
        android:text="@string/suroeste" />

    <Button
        android:id="@+id/sur"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suroeste"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/sur" />

    <Button
        android:id="@+id/noreste"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/norte"
        android:layout_toEndOf="@+id/norte"
        android:text="@string/noroeste" />

    <Button
        android:id="@+id/centro"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noroeste"
        android:layout_centerHorizontal="true"
        android:text="@string/centro" />

    <Button
        android:id="@+id/este"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/noroeste"
        android:text="@string/este" />

    <Button
        android:id="@+id/sureste"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/noreste"
        android:layout_below="@+id/oeste"
        android:layout_marginEnd="-4dp"
        android:layout_marginTop="0dp"
        android:text="@string/sureste" />

</RelativeLayout>