<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Linear_layout">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="@string/boton_siguiente"
        android:onClick="cambiarActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="394dp"
            android:layout_height="167dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:text="@string/opcion1" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:text="@string/opcion2" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="11dp"
                android:layout_weight="1"
                android:text="@string/opcion3" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>